--- a/buliteen.html
+++ b/buliteen.html
@@ -44,8 +44,8 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>About Us</h2>
-							<p>About Seventh-day Adventists</p>
+							<h2>Buliteens</h2>
+							<p>What Happened at Church Last Week??</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
@@ -63,11 +63,11 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="https://www.facebook.com/ridgesdachurch" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.instagram.com/ridgeareasdachurch/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://www.youtube.com/@RidgeAreaSDAChurch" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
-							<li><a href="mailto:theridgesda@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-
+							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
