--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 											<li><a href="elements.html">Elements</a></li>
 											<li><a href="pastorscorner.html">Pastor's Corner</a></li>
 											<li><a href="https://adventistgiving.org/donate/ANTTRI">Online Giving</a></li>
+											<li><a href="buliteen.html">View Previous Buliteens</a></li>					
 											<li><a href="#">Log In</a></li>
 										</ul>
 									</div>
