--- a/buliteen.html
+++ b/buliteen.html
@@ -1,89 +1,144 @@
 <!DOCTYPE HTML>
 <!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Spectral by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Ridge Area SDA Church</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+    <head>
+        <title>Ridge Area SDA Church</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="stylesheet" href="assets/css/main.css" />
+        <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    </head>
+    <body class="is-preload">
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+        <!-- Page Wrapper -->
+            <div id="page-wrapper">
 
-				<!-- Header -->
-					<header id="header">
-						<h1><a href="index.html">Ridge Area SDA Church</a></h1>
-						<nav id="nav">
-							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="watchlive.html">Watch Live</a></li>
-											<li><a href="aboutus.html">About Us</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="pastorscorner.html">Pastor's Corner</a></li>
-											<li><a href="https://adventistgiving.org/donate/ANTTRI">Online Giving</a></li>
-											<li><a href="buliteen.html">View Previous Buliteens</a></li>					
-											<li><a href="#">Log In</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-					</header>
+                <!-- Header -->
+                    <header id="header">
+                        <h1><a href="index.html">Ridge Area SDA Church</a></h1>
+                        <nav id="nav">
+                            <ul>
+                                <li class="special">
+                                    <a href="#menu" class="menuToggle"><span>Menu</span></a>
+                                    <div id="menu">
+                                        <ul>
+                                            <li><a href="index.html">Home</a></li>
+                                            <li><a href="watchlive.html">Watch Live</a></li>
+                                            <li><a href="aboutus.html">About Us</a></li>
+                                            <li><a href="elements.html">Elements</a></li>
+                                            <li><a href="pastorscorner.html">Pastor's Corner</a></li>
+                                            <li><a href="https://adventistgiving.org/donate/ANTTRI">Online Giving</a></li>
+                                            <li><a href="buliteen.html">View Previous Buliteens</a></li>                  
+                                            <li><a href="login.html">Log In</a></li> <!-- Added login link -->
+                                            <li><a href="register.html">Register Now</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                            </ul>
+                        </nav>
+                    </header>
 
-				<!-- Main -->
-					<article id="main">
-						<header>
-							<h2>Buliteens</h2>
-							<p>What Happened at Church Last Week??</p>
-						</header>
-						<section class="wrapper style5">
+                <!-- Main -->
+                    <article id="main">
+                        <header>
+                            <h2>Buliteens</h2>
+                            <p>Stay In Touch with Our Church at a Whole</p>
+                        </header>
+						<section>
 							<div class="inner">
-
-								<p>The Seventh-day Adventist Church is a mainstream Protestant church with approximately 19 million members worldwide, including more than one million members in North America. The Seventh-day Adventist Church seeks to enhance quality of life for people everywhere and to let people know that Jesus is coming again soon.</p>
-								<p>Adventists believe a Trinity of three persons—the Father, the Son, and the Holy Spirit—make up one God. They made salvation possible when Jesus, the Son, came to earth as a baby in Bethlehem and lived a sinless life in accordance with the Father's will. When Jesus was crucified for the sins of the people of the world and arose from the dead on the third day, victory was won for everyone.</p>
-								
-								<p>When He returned to heaven following the resurrection, Jesus left the Holy Spirit to serve as our Comforter and Counselor. He promised to return to earth a second time to complete His plan of salvation and take His people to heaven. Adventists are among the believers who look forward to that day.</p>
-								<p>Adventists believe that God is concerned with the quality of human life, and that everything—the way we live, eat, speak, think, treat each other, and care for the world around us—is part of His plan. Our families, our children, our jobs, our talents, our money, and our time are all important to Him.</p>
-								<p><a href="https://www.adventist.org/en/beliefs/" class="su__button theme-button__primary theme--secondary-background-color">FIND OUT MORE</a></p>
+								<div class="thumbnail">
+									<a onclick="loadPDF('assets/pdf/462024.pdf')">
+										<div class="pdf-thumbnail">
+											<img src="assets/pdf/462024.jpg" alt="April 6, 2024">
+											<h3>April 6, 2024</h3>
+										</div>
+									</a>
+								</div>
+								<div class="thumbnail">
+									<a onclick="loadPDF('assets/pdf/3302024.pdf')">
+										<div class="pdf-thumbnail">
+											<img src="assets/pdf/3302024.jpg" alt="March 30, 2024">
+											<h3>March 30, 2024</h3>
+										</div>
+									</a>
+								</div>
+								<div class="thumbnail">
+									<a onclick="loadPDF('assets/pdf/3162024.pdf')">
+										<div class="pdf-thumbnail">
+											<img src="assets/pdf/3162024.jpg" alt="March 16, 2024">
+											<h3>March 16, 2024</h3>
+										</div>
+									</a>
+								</div>
+								<div class="thumbnail">
+									<a onclick="loadPDF('assets/pdf/392024.pdf')">
+										<div class="pdf-thumbnail">
+											<img src="assets/pdf/392024.jpg" alt="March 9, 2024">
+											<h3>March 9, 2024</h3>
+										</div>
+									</a>
+								</div>
 							</div>
-						</section>
-					</article>
+						</section>									
+						<iframe id="pdfFrame" style="display: none;"></iframe>
+						<button onclick="closePDF()">Close PDF</button>
+						<a href="list.html">View More</a>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+                    </article>
 
-			</div>
+                <!-- Footer -->
+                    <footer id="footer">
+                        <ul class="icons">
+                            <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                            <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+                            <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                            <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+                            <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+                        </ul>
+                        <ul class="copyright">
+                            <li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                        </ul>
+                    </footer>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+            </div>
 
-	</body>
+        <!-- Scripts -->
+			<script>
+				function loadPDF(pdfUrl) {
+					var pdfFrame = document.getElementById('pdfFrame');
+					pdfFrame.src = pdfUrl;
+					pdfFrame.style.display = 'block'; // Show the iframe
+					pdfFrame.src = pdfUrl;
+        			pdfFrame.style.position = 'fixed';
+        			pdfFrame.style.top = '50%';
+        			pdfFrame.style.left = '50%';
+        			pdfFrame.style.transform = 'translate(-50%, -50%)';
+        			pdfFrame.style.border = '2px solid #000';
+        			pdfFrame.style.zIndex = '9999';
+        			pdfFrame.style.display = 'block';
+        			pdfFrame.style.width = '80%'; // Adjust width as needed
+        			pdfFrame.style.height = '80%'; // Adjust height as needed
+				}
+
+				function closePDF() {
+                    var pdfFrame = document.getElementById('pdfFrame');
+                    pdfFrame.style.display = 'none';
+                }
+			</script>
+            <script src="assets/js/jquery.min.js"></script>
+            <script src="assets/js/jquery.scrollex.min.js"></script>
+            <script src="assets/js/jquery.scrolly.min.js"></script>
+            <script src="assets/js/browser.min.js"></script>
+            <script src="assets/js/breakpoints.min.js"></script>
+            <script src="assets/js/util.js"></script>
+            <script src="assets/js/main.js"></script>
+
+			
+			
+			
+    </body>
 </html>
