--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 											<li><a href="pastorscorner.html">Pastor's Corner</a></li>
 											<li><a href="https://adventistgiving.org/donate/ANTTRI">Online Giving</a></li>
 											<li><a href="buliteen.html">View Previous Buliteens</a></li>					
-											<li><a href="#">Log In</a></li>
+											<li><a href="login.html">Log In</a></li> <!-- Added login link -->
+											<li><a href="register.html">Register Now</a></li>
 										</ul>
 									</div>
 								</li>
