Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   aboutus.html
	new file:   assets/pdf/04132024.jpg
	new file:   assets/pdf/04132024.pdf
	modified:   buliteen.html
	new file:   contactus.html
	modified:   index.html
	modified:   login.html
	modified:   pastorscorner.html
	modified:   register.html
	modified:   watchlive.html

--- a/aboutus.html
+++ b/aboutus.html
@@ -32,7 +32,8 @@
 											<li><a href="elements.html">Elements</a></li>
 											<li><a href="pastorscorner.html">Pastor's Corner</a></li>
 											<li><a href="https://adventistgiving.org/donate/ANTTRI">Online Giving</a></li>
-											<li><a href="buliteen.html">View Previous Buliteens</a></li>					
+											<li><a href="buliteen.html">View Previous Buliteens</a></li>		
+											<li><a href="contactus.html">Contact Us</a></li>			
 											<li><a href="login.html">Log In</a></li> <!-- Added login link -->
 											<li><a href="register.html">Register Now</a></li>
 										</ul>
