--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 											<li><a href="elements.html">Elements</a></li>
 											<li><a href="pastorscorner.html">Pastor's Corner</a></li>
 											<li><a href="https://adventistgiving.org/donate/ANTTRI">Online Giving</a></li>
-											<li><a href="buliteen.html">View Previous Buliteens</a></li>					
+											<li><a href="buliteen.html">View Previous Buliteens</a></li>		
+											<li><a href="contactus.html">Contact Us</a></li>			
 											<li><a href="login.html">Log In</a></li> <!-- Added login link -->
 											<li><a href="register.html">Register Now</a></li>
 										</ul>
@@ -65,8 +66,8 @@
 							<header class="major">
 								<h2>Welcome to the Ridge Area SDA Church</h2>
 								<p>Our mailing address is
-									PO Box 1681
-									Avon Park, FL</p>
+									<br>PO Box 1681
+									<br>Avon Park, FL 33825</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
@@ -144,12 +145,12 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Looking for a Place of Worship</h2>
+								<p>Reach Out to Us. Let us be your new Church Home!</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="contactus.html" class="button fit primary">Contact Us</a></li>
+								<li><a href="aboutus.html" class="button fit">Learn More about Us!</a></li>
 							</ul>
 						</div>
 					</section>
