--- a/buliteen.html
+++ b/buliteen.html
@@ -25,17 +25,18 @@
                                 <li class="special">
                                     <a href="#menu" class="menuToggle"><span>Menu</span></a>
                                     <div id="menu">
-                                        <ul>
-                                            <li><a href="index.html">Home</a></li>
-                                            <li><a href="watchlive.html">Watch Live</a></li>
-                                            <li><a href="aboutus.html">About Us</a></li>
-                                            <li><a href="elements.html">Elements</a></li>
-                                            <li><a href="pastorscorner.html">Pastor's Corner</a></li>
-                                            <li><a href="https://adventistgiving.org/donate/ANTTRI">Online Giving</a></li>
-                                            <li><a href="buliteen.html">View Previous Buliteens</a></li>                  
-                                            <li><a href="login.html">Log In</a></li> <!-- Added login link -->
-                                            <li><a href="register.html">Register Now</a></li>
-                                        </ul>
+										<ul>
+											<li><a href="index.html">Home</a></li>
+											<li><a href="watchlive.html">Watch Live</a></li>
+											<li><a href="aboutus.html">About Us</a></li>
+											<li><a href="elements.html">Elements</a></li>
+											<li><a href="pastorscorner.html">Pastor's Corner</a></li>
+											<li><a href="https://adventistgiving.org/donate/ANTTRI">Online Giving</a></li>
+											<li><a href="buliteen.html">View Previous Buliteens</a></li>		
+											<li><a href="contactus.html">Contact Us</a></li>			
+											<li><a href="login.html">Log In</a></li> <!-- Added login link -->
+											<li><a href="register.html">Register Now</a></li>
+										</ul>
                                     </div>
                                 </li>
                             </ul>
@@ -50,6 +51,14 @@
                         </header>
 						<section>
 							<div class="inner">
+                                <div class="thumbnail">
+									<a onclick="loadPDF('assets/pdf/04132024.pdf')">
+										<div class="pdf-thumbnail">
+											<img src="assets/pdf/04132024.jpg" alt="April 6, 2024">
+											<h3>April 13, 2024</h3>
+										</div>
+									</a>
+								</div>
 								<div class="thumbnail">
 									<a onclick="loadPDF('assets/pdf/462024.pdf')">
 										<div class="pdf-thumbnail">
