--- a/watchlive.html
+++ b/watchlive.html
@@ -15,14 +15,15 @@
         <nav id="nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="watchlive.html">Watch Live</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="elements.html">Elements</a></li>
                 <li><a href="pastorscorner.html">Pastor's Corner</a></li>
                 <li><a href="https://adventistgiving.org/donate/ANTTRI">Online Giving</a></li>
-                <li><a href="buliteen.html">View Previous Bulletins</a></li>                  
+                <li><a href="buliteen.html">View Previous Buliteens</a></li>		
+                <li><a href="contactus.html">Contact Us</a></li>			
                 <li><a href="login.html">Log In</a></li> <!-- Added login link -->
                 <li><a href="register.html">Register Now</a></li>
-                <!-- Add more navigation links if needed -->
             </ul>
         </nav>
     </header>
