Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   contactus.html

--- a/contactus.html
+++ b/contactus.html
@@ -87,7 +87,7 @@
                         <section class="wrapper style3">
                             <div class="inner">
                                 <h3>Contact Form</h3>
-                                <form method="post" action="#">
+                                <form action="https://getform.io/f/nadodmyb" method="POST">
                                     <div class="fields">
                                         <div class="field half">
                                             <label for="name">Name</label>
