Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -146,11 +146,16 @@
 						<div class="inner">
 							<header>
 								<h2>Looking for a Place of Worship</h2>
-								<p>Reach Out to Us. Let us be your new Church Home!</p>
+								<p>Reach out to us. Let us be your new Church Home!</p>
 							</header>
 							<ul class="actions stacked">
 								<li><a href="contactus.html" class="button fit primary">Contact Us</a></li>
-								<li><a href="aboutus.html" class="button fit">Learn More about Us!</a></li>
+								<li>
+									<a href="aboutus.html" class="button fit">
+										<span>Learn More</span>
+									</a>
+								</li>
+								
 							</ul>
 						</div>
 					</section>
