--- a/pastorscorner.html
+++ b/pastorscorner.html
@@ -46,8 +46,8 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>About Us</h2>
-							<p>About Seventh-day Adventists</p>
+							<h2>Pastor's Corner</h2>
+							<p>Dr. Donald Burden</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
