--- a/index.html
+++ b/index.html
@@ -108,39 +108,30 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>From The Secretary's Desk</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>From the Desk of Grayce Grant</h2>
+								<p>Welcome to the Ridge Church community! We are delighted to share some important updates and highlights with you. Our goal is to keep everyone informed and engaged with the various activities, events, and initiatives happening within our church. Here are some key things you should know:</p>
 							</header>
 							<ul class="features">
-								<li class="icon fa-paper-plane">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fa-backpack">
+									<h3>Ridge Area Backpack Drive</h3>
+									<p>Join us this Saturday at 5 PM for our annual Ridge area backpack drive! We will be collecting backpacks and school supplies to support students in need within our community. Your donations will help ensure that every child starts the school year with the necessary tools for success. We look forward to your participation and generosity in making this event a success!</p>
 								</li>
-								<li class="icon solid fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fa-building">
+									<h3>Ridge Community Center</h3>
+									<p>The Ridge Community Center is dedicated to helping those in need within our community. We are open on Mondays from 10 AM to 1 PM and Fridays from 12 PM to 3 PM. During these hours, we distribute food to individuals and families to ensure everyone has access to nutritious meals. We welcome all community members to visit the center and benefit from our services.</p>
 								</li>
-								<li class="icon solid fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fa-seedling">
+									<h3>Healthy Roots Garden</h3>
+									<p>Our Healthy Roots Garden is open every Monday from 4:30 PM to 6:00 PM. This community garden is a wonderful place to connect with nature and grow fresh produce. We encourage everyone to participate, whether you are an experienced gardener or just getting started. Join us to learn about sustainable gardening practices and enjoy the fruits of your labor.</p>
 								</li>
-								<li class="icon solid fa-headphones-alt">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fa-music">
+									<h3>Ridge Church Choir</h3>
+									<p>The Ridge Church Choir welcomes all singers to join us every Thursday at 7 PM. Whether you’re an experienced vocalist or a beginner, we invite you to come share your love for music with us. This is a wonderful opportunity to make new friends, enhance your singing skills, and participate in uplifting our church services through song.</p>
 								</li>
-								<li class="icon fa-heart">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-flag">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-							</ul>
+						</ul>
 						</div>
 					</section>
-
+				
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
