Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -105,32 +105,41 @@
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
-						<div class="inner">
-							<header class="major">
-								<h2>From the Desk of Grayce Grant</h2>
-								<p>Welcome to the Ridge Church community! We are delighted to share some important updates and highlights with you. Our goal is to keep everyone informed and engaged with the various activities, events, and initiatives happening within our church. Here are some key things you should know:</p>
-							</header>
-							<ul class="features">
-								<li class="icon fa-backpack">
-									<h3>Ridge Area Backpack Drive</h3>
-									<p>Join us this Saturday at 5 PM for our annual Ridge area backpack drive! We will be collecting backpacks and school supplies to support students in need within our community. Your donations will help ensure that every child starts the school year with the necessary tools for success. We look forward to your participation and generosity in making this event a success!</p>
-								</li>
-								<li class="icon fa-building">
-									<h3>Ridge Community Center</h3>
-									<p>The Ridge Community Center is dedicated to helping those in need within our community. We are open on Mondays from 10 AM to 1 PM and Fridays from 12 PM to 3 PM. During these hours, we distribute food to individuals and families to ensure everyone has access to nutritious meals. We welcome all community members to visit the center and benefit from our services.</p>
-								</li>
-								<li class="icon fa-seedling">
-									<h3>Healthy Roots Garden</h3>
-									<p>Our Healthy Roots Garden is open every Monday from 4:30 PM to 6:00 PM. This community garden is a wonderful place to connect with nature and grow fresh produce. We encourage everyone to participate, whether you are an experienced gardener or just getting started. Join us to learn about sustainable gardening practices and enjoy the fruits of your labor.</p>
-								</li>
-								<li class="icon fa-music">
-									<h3>Ridge Church Choir</h3>
-									<p>The Ridge Church Choir welcomes all singers to join us every Thursday at 7 PM. Whether you’re an experienced vocalist or a beginner, we invite you to come share your love for music with us. This is a wonderful opportunity to make new friends, enhance your singing skills, and participate in uplifting our church services through song.</p>
-								</li>
+				<section id="three" class="wrapper style3 special">
+					<div class="inner">
+						<header class="major">
+							<h2>From the Desk of Grayce Grant</h2>
+							<p>Welcome to the Ridge Church community! We are delighted to share some important updates and highlights with you. Our goal is to keep everyone informed and engaged with the various activities, events, and initiatives happening within our church. Here are some key things you should know:</p>
+						</header>
+						<ul class="features">
+							<li class="icon fa-backpack">
+								<h3>Ridge Area Backpack Drive</h3>
+								<p>Join us this Saturday at 5 PM for our annual Ridge area backpack drive! We will be collecting backpacks and school supplies to support students in need within our community. Your donations will help ensure that every child starts the school year with the necessary tools for success. We look forward to your participation and generosity in making this event a success!</p>
+							</li>
+							<li class="icon fa-building">
+								<h3>Ridge Community Center</h3>
+								<p>The Ridge Community Center is dedicated to helping those in need within our community. We are open on Mondays from 10 AM to 1 PM and Fridays from 12 PM to 3 PM. During these hours, we distribute food to individuals and families to ensure everyone has access to nutritious meals. We welcome all community members to visit the center and benefit from our services.</p>
+							</li>
+							<li class="icon fa-seedling">
+								<h3>Healthy Roots Garden</h3>
+								<p>Our Healthy Roots Garden is open every Monday from 4:30 PM to 6:00 PM. This community garden is a wonderful place to connect with nature and grow fresh produce. We encourage everyone to participate, whether you are an experienced gardener or just getting started. Join us to learn about sustainable gardening practices and enjoy the fruits of your labor.</p>
+							</li>
+							<li class="icon fa-music">
+								<h3>Ridge Church Choir</h3>
+								<p>The Ridge Church Choir welcomes all singers to join us every Thursday at 7 PM. Whether you’re an experienced vocalist or a beginner, we invite you to come share your love for music with us. This is a wonderful opportunity to make new friends, enhance your singing skills, and participate in uplifting our church services through song.</p>
+							</li>
+							<li class="icon fa-paper">
+								<h3>Bulletin Announcements</h3>
+								<p>Please submit all bulletin announcements to the church secretary by Wednesday at 5 PM. Your timely submissions help us ensure that our weekly bulletin is comprehensive and up-to-date, keeping our congregation informed about upcoming events, important news, and special highlights within our church community. Thank you for your cooperation!</p>
+							</li>
+							<li class="icon fa-church">
+								<h3>Welcome to the Ridge</h3>
+								<p>Finally, welcome to the Ridge Church! We are thrilled to have you here and hope you find a warm and welcoming community. We encourage you to take part in our various ministries and activities to help grow our church and deepen your faith. Whether you’re looking to volunteer, join a group, or simply connect with others, there is a place for you here. Enjoy your time with us and we look forward to growing together!</p>
+							</li>
 						</ul>
-						</div>
-					</section>
+					</div>
+				</section>
+
 				
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
