--- a/index.html
+++ b/index.html
@@ -60,21 +60,29 @@
 					</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style1 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Welcome to the Ridge Area SDA Church</h2>
-								<p>Our mailing address is
-									<br>PO Box 1681
-									<br>Avon Park, FL 33825</p>
-							</header>
-							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul>
-						</div>
-					</section>
+				<section id="one" class="wrapper style1 special">
+					<div class="inner">
+						<header class="major">
+							<!-- <h2>Welcome to the Ridge Area SDA Church</h2>
+							<br> -->
+							<h4>Come Visit Us For Service at</h4>
+							<br>
+							<p>507 W Hal McRae Blvd,<br>
+							Avon Park, FL 33825</p>
+							<br>
+							<h4>Our mailing address is</h4>
+							<br>
+							<p>PO Box 1681,<br>
+							Avon Park, FL 33825</p>
+						</header>
+						<ul class="icons major">
+							<li><span class="icon fa-bible major"><span class="label">Lorem</span></span></li>
+							<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
+							<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
+						</ul>
+					</div>
+				</section>
+
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
