Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   contactus.html
	new file:   images/ridgesdacashapp.jpg
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -63,26 +63,23 @@
 				<section id="one" class="wrapper style1 special">
 					<div class="inner">
 						<header class="major">
-							<!-- <h2>Welcome to the Ridge Area SDA Church</h2>
-							<br> -->
 							<h4>Come Visit Us For Service at</h4>
 							<br>
 							<p>507 W Hal McRae Blvd,<br>
-							Avon Park, FL 33825</p>
+								Avon Park, FL 33825</p>
+							<br>
+							<h4>Services on Sabbath:</h4>
+							<p>9:30 AM for Sabbath School</p>
+							<p>11:00 AM for Divine Worship</p>
+							<p>Wednesday at 7 PM for Prayer Meeting.</p>
 							<br>
 							<h4>Our mailing address is</h4>
 							<br>
 							<p>PO Box 1681,<br>
-							Avon Park, FL 33825</p>
+								Avon Park, FL 33825</p>
 						</header>
-						<ul class="icons major">
-							<li><span class="icon fa-bible major"><span class="label">Lorem</span></span></li>
-							<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-							<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
-						</ul>
 					</div>
 				</section>
-
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
@@ -119,9 +116,10 @@
 							<p>Welcome to the Ridge Church community! We are delighted to share some important updates and highlights with you. Our goal is to keep everyone informed and engaged with the various activities, events, and initiatives happening within our church. Here are some key things you should know:</p>
 						</header>
 						<ul class="features">
-							<li class="icon fa-backpack">
-								<h3>Ridge Area Backpack Drive</h3>
-								<p>Join us this Saturday at 5 PM for our annual Ridge area backpack drive! We will be collecting backpacks and school supplies to support students in need within our community. Your donations will help ensure that every child starts the school year with the necessary tools for success. We look forward to your participation and generosity in making this event a success!</p>
+							<li class="icon fa-money">
+								<h3>Ridge Area Cashapp</h3>
+								<img src="/images/ridgesdacashapp.jpg" alt="Ridge Area Cashapp" style="max-width: 100%; height: auto;">
+								<p>We are excited to offer the ability to give via Cashapp! Your generous contributions can now be made easily and securely through this convenient platform. Thank you for your support!</p>
 							</li>
 							<li class="icon fa-building">
 								<h3>Ridge Community Center</h3>
@@ -146,6 +144,7 @@
 						</ul>
 					</div>
 				</section>
+
 
 				
 				<!-- CTA -->
