Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 						<ul class="features">
 							<li class="icon fa-money">
 								<h3>Ridge Area Cashapp</h3>
-								<img src="/images/ridgesdacashapp.jpg" alt="Ridge Area Cashapp" style="max-width: 100%; height: auto;">
+								<img src="images/ridgesdacashapp.jpg" alt="Ridge Area Cashapp" style="max-width: 100%; height: auto;">
 								<p>We are excited to offer the ability to give via Cashapp! Your generous contributions can now be made easily and securely through this convenient platform. Thank you for your support!</p>
 							</li>
 							<li class="icon fa-building">
