--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 								Avon Park, FL 33825</p>
 							<br>
 							<h4>Services on Sabbath:</h4>
-							<p>9:30 AM for Sabbath School</p>
-							<p>11:00 AM for Divine Worship</p>
-							<p>Wednesday at 7 PM for Prayer Meeting.</p>
+							<p>9:30 AM - Sabbath School</p>
+							<p>11:00 AM - Divine Worship</p>
+							<p>Wednesday @ 7 PM - Prayer Meeting</p>
 							<br>
-							<h4>Our mailing address is</h4>
+							<h4>Mailing Address</h4>
 							<br>
 							<p>PO Box 1681,<br>
 								Avon Park, FL 33825</p>
@@ -86,10 +86,10 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
 								<h2>Meet Our Pastor</h2>
-								<h3>Dr Donald Burden</h3>
+								<h4>Dr Donald Burden</h4>
 								<p>Dr. Donald L. Burden has pastored for 34 years. He served 31 of those years in the Allegheny West Conference in various capacities.</p>
-								<p>His favorite Bible text is Proverbs 3:5,6  “Trust in the Lord with all thy heart and lean not unto thy own understanding. In all thy ways acknowledge Him and He shall direct thy path.”</p>
-								<p>	His motto for life is Jehovah Jireh- The Lord will provide; the Lord will see to it.</p>
+								<p>His favorite Bible text is Proverbs 3:5-6: “Trust in the Lord with all thy heart and lean not unto thy own understanding. In all thy ways acknowledge Him and He shall direct thy path.”</p>
+								<p>His motto for life is Jehovah Jireh- The Lord will provide; the Lord will see to it.</p>
 							</div>
 						</section>
 						<section class="spotlight">
