Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							<h4>Services on Sabbath:</h4>
 							<p>9:30 AM - Sabbath School</p>
 							<p>11:00 AM - Divine Worship</p>
-							<p>Wednesday @ 7 PM - Prayer Meeting</p>
+							<p>Wednesday 7:00 PM - Prayer Meeting</p>
 							<br>
 							<h4>Mailing Address</h4>
 							<br>
@@ -89,13 +89,13 @@
 								<h4>Dr Donald Burden</h4>
 								<p>Dr. Donald L. Burden has pastored for 34 years. He served 31 of those years in the Allegheny West Conference in various capacities.</p>
 								<p>His favorite Bible text is Proverbs 3:5-6: “Trust in the Lord with all thy heart and lean not unto thy own understanding. In all thy ways acknowledge Him and He shall direct thy path.”</p>
-								<p>His motto for life is Jehovah Jireh- The Lord will provide; the Lord will see to it.</p>
+								<p>His motto for life is "Jehovah Jireh- The Lord will provide; the Lord will see to it."</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>Join us on Our Prayer Line</h2>
-								<p>Phone No: 6073741189 </p>
+								<p>Phone: 607-374-1189 </p>
 								<p>Access code: 241108</p>
 							</div>
 						</section>
@@ -112,10 +112,14 @@
 				<section id="three" class="wrapper style3 special">
 					<div class="inner">
 						<header class="major">
-							<h2>From the Desk of Grayce Grant</h2>
+							<h2>Secretary's Corner</h2>
 							<p>Welcome to the Ridge Church community! We are delighted to share some important updates and highlights with you. Our goal is to keep everyone informed and engaged with the various activities, events, and initiatives happening within our church. Here are some key things you should know:</p>
 						</header>
 						<ul class="features">
+							<li class="icon fa-church">
+								<h3>Welcome to the Ridge</h3>
+								<p>Welcome to the Ridge Church! We are thrilled to have you here and hope you find a warm and welcoming community. We encourage you to take part in our various ministries and activities to help grow our church and deepen your faith. Whether you’re looking to volunteer, join a group, or simply connect with others, there is a place for you here. Enjoy your time with us and we look forward to growing together!</p>
+							</li>
 							<li class="icon fa-money">
 								<h3>Ridge Area Cashapp</h3>
 								<img src="images/ridgesdacashapp.jpg" alt="Ridge Area Cashapp" style="max-width: 100%; height: auto;">
@@ -123,23 +127,23 @@
 							</li>
 							<li class="icon fa-building">
 								<h3>Ridge Community Center</h3>
-								<p>The Ridge Community Center is dedicated to helping those in need within our community. We are open on Mondays from 10 AM to 1 PM and Fridays from 12 PM to 3 PM. During these hours, we distribute food to individuals and families to ensure everyone has access to nutritious meals. We welcome all community members to visit the center and benefit from our services.</p>
-							</li>
+								<p>The Ridge Community Center is dedicated to helping those in need within our community. We distribute food to individuals and families to ensure everyone has access to nutritious meals. We welcome all community members to visit the center and benefit from our services.</p>
+								<p>Monday's from 10-1 PM and Friday's from 12-3 PM.</p>
+							</li>							
 							<li class="icon fa-seedling">
 								<h3>Healthy Roots Garden</h3>
-								<p>Our Healthy Roots Garden is open every Monday from 4:30 PM to 6:00 PM. This community garden is a wonderful place to connect with nature and grow fresh produce. We encourage everyone to participate, whether you are an experienced gardener or just getting started. Join us to learn about sustainable gardening practices and enjoy the fruits of your labor.</p>
+								<p>Our Healthy Roots Garden is a wonderful place to connect with nature and grow fresh produce. We encourage everyone to participate, whether you are an experienced gardener or just getting started. Join us to learn about sustainable gardening practices and enjoy the fruits of your labor.</p>
+								<p>Monday from 4:30 PM to 6:00 PM
+									West Gate Entrance</p>
 							</li>
 							<li class="icon fa-music">
 								<h3>Ridge Church Choir</h3>
-								<p>The Ridge Church Choir welcomes all singers to join us every Thursday at 7 PM. Whether you’re an experienced vocalist or a beginner, we invite you to come share your love for music with us. This is a wonderful opportunity to make new friends, enhance your singing skills, and participate in uplifting our church services through song.</p>
+								<p>The Ridge Church Choir welcomes all singers to join. Whether you’re an experienced vocalist or a beginner, we invite you to come share your love for music with us. This is a wonderful opportunity to make new friends, enhance your singing skills, and participate in uplifting our church services through song.</p>
+								<p>Every Thursday at 7 PM</p>
 							</li>
 							<li class="icon fa-paper">
 								<h3>Bulletin Announcements</h3>
 								<p>Please submit all bulletin announcements to the church secretary by Wednesday at 5 PM. Your timely submissions help us ensure that our weekly bulletin is comprehensive and up-to-date, keeping our congregation informed about upcoming events, important news, and special highlights within our church community. Thank you for your cooperation!</p>
-							</li>
-							<li class="icon fa-church">
-								<h3>Welcome to the Ridge</h3>
-								<p>Finally, welcome to the Ridge Church! We are thrilled to have you here and hope you find a warm and welcoming community. We encourage you to take part in our various ministries and activities to help grow our church and deepen your faith. Whether you’re looking to volunteer, join a group, or simply connect with others, there is a place for you here. Enjoy your time with us and we look forward to growing together!</p>
 							</li>
 						</ul>
 					</div>
