Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 											<li><a href="aboutus.html">About Us</a></li>
 											<li><a href="pastorscorner.html">Pastor's Corner</a></li>
 											<li><a href="https://adventistgiving.org/donate/ANTTRI">Online Giving</a></li>
-											<li><a href="buliteen.html">View Previous Buliteens</a></li>		
+											<li><a href="buliteen.html">View Previous Bulletins</a></li>		
 											<li><a href="contactus.html">Contact Us</a></li>			
 											<li><a href="login.html">Log In</a></li> <!-- Added login link -->
 											<li><a href="register.html">Register Now</a></li>
@@ -89,7 +89,8 @@
 								<h4>Dr Donald Burden</h4>
 								<p>Dr. Donald L. Burden has pastored for 34 years. He served 31 of those years in the Allegheny West Conference in various capacities.</p>
 								<p>His favorite Bible text is Proverbs 3:5-6: “Trust in the Lord with all thy heart and lean not unto thy own understanding. In all thy ways acknowledge Him and He shall direct thy path.”</p>
-								<p>His motto for life is "Jehovah Jireh- The Lord will provide; the Lord will see to it."</p>
+								<p>His motto for life is 
+									"Jehovah Jireh- The Lord will provide; the Lord will see to it."</p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -128,7 +129,7 @@
 							<li class="icon fa-building">
 								<h3>Ridge Community Center</h3>
 								<p>The Ridge Community Center is dedicated to helping those in need within our community. We distribute food to individuals and families to ensure everyone has access to nutritious meals. We welcome all community members to visit the center and benefit from our services.</p>
-								<p>Monday's from 10-1 PM and Friday's from 12-3 PM.</p>
+								<p>Mondays from 10 AM-1 PM and Fridays from 12-3 PM</p>
 							</li>							
 							<li class="icon fa-seedling">
 								<h3>Healthy Roots Garden</h3>
