--- a/buliteen.html
+++ b/buliteen.html
@@ -31,7 +31,7 @@
 											<li><a href="aboutus.html">About Us</a></li>
 											<li><a href="pastorscorner.html">Pastor's Corner</a></li>
 											<li><a href="https://adventistgiving.org/donate/ANTTRI">Online Giving</a></li>
-											<li><a href="buliteen.html">View Previous Buliteens</a></li>		
+											<li><a href="buliteen.html">View Previous Bulletins</a></li>		
 											<li><a href="contactus.html">Contact Us</a></li>			
 											<li><a href="login.html">Log In</a></li> <!-- Added login link -->
 											<li><a href="register.html">Register Now</a></li>
@@ -45,7 +45,7 @@
                 <!-- Main -->
                     <article id="main">
                         <header>
-                            <h2>Buliteens</h2>
+                            <h2>Bulletins</h2>
                             <p>Stay In Touch with Our Church at a Whole</p>
                         </header>
 						<section>
