--- a/contactus.html
+++ b/contactus.html
@@ -31,7 +31,7 @@
 											<li><a href="aboutus.html">About Us</a></li>
 											<li><a href="pastorscorner.html">Pastor's Corner</a></li>
 											<li><a href="https://adventistgiving.org/donate/ANTTRI">Online Giving</a></li>
-											<li><a href="buliteen.html">View Previous Buliteens</a></li>		
+											<li><a href="buliteen.html">View Previous Bulletins</a></li>		
 											<li><a href="contactus.html">Contact Us</a></li>			
 											<li><a href="login.html">Log In</a></li> <!-- Added login link -->
 											<li><a href="register.html">Register Now</a></li>
