Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   aboutus.html
	modified:   buliteen.html
	modified:   contactus.html
	modified:   index.html
	modified:   login.html
	new file:   morethanthis.html
	modified:   pastorscorner.html
	modified:   register.html
	modified:   watchlive.html

--- a/morethanthis.html
+++ b/morethanthis.html
@@ -46,18 +46,16 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>About Us</h2>
-							<p>About Seventh-day Adventists</p>
+							<h2>More Than This</h2>
+							<p>Written By Analisa Camelia</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
 
 								<p>The Seventh-day Adventist Church is a mainstream Protestant church with approximately 19 million members worldwide, including more than one million members in North America. The Seventh-day Adventist Church seeks to enhance quality of life for people everywhere and to let people know that Jesus is coming again soon.</p>
-								<p>Adventists believe a Trinity of three persons—the Father, the Son, and the Holy Spirit—make up one God. They made salvation possible when Jesus, the Son, came to earth as a baby in Bethlehem and lived a sinless life in accordance with the Father's will. When Jesus was crucified for the sins of the people of the world and arose from the dead on the third day, victory was won for everyone.</p>
-								
-								<p>When He returned to heaven following the resurrection, Jesus left the Holy Spirit to serve as our Comforter and Counselor. He promised to return to earth a second time to complete His plan of salvation and take His people to heaven. Adventists are among the believers who look forward to that day.</p>
-								<p>Adventists believe that God is concerned with the quality of human life, and that everything—the way we live, eat, speak, think, treat each other, and care for the world around us—is part of His plan. Our families, our children, our jobs, our talents, our money, and our time are all important to Him.</p>
-								<p><a href="https://www.adventist.org/en/beliefs/" class="su__button theme-button__primary theme--secondary-background-color">FIND OUT MORE</a></p>
+							</div>
+							<div>
+
 							</div>
 						</section>
 					</article>
