--- a/watchlive.html
+++ b/watchlive.html
@@ -18,6 +18,7 @@
                 <li><a href="watchlive.html">Watch Live</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="pastorscorner.html">Pastor's Corner</a></li>
+                <li><a href="morethanthis.html">More Than This</a></li>											
                 <li><a href="https://adventistgiving.org/donate/ANTTRI">Online Giving</a></li>
                 <li><a href="buliteen.html">View Previous Bulletins</a></li>		
                 <li><a href="contactus.html">Contact Us</a></li>			
