Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   morethanthis.html

--- a/morethanthis.html
+++ b/morethanthis.html
@@ -51,15 +51,20 @@
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
-
 								<p>The Seventh-day Adventist Church is a mainstream Protestant church with approximately 19 million members worldwide, including more than one million members in North America. The Seventh-day Adventist Church seeks to enhance quality of life for people everywhere and to let people know that Jesus is coming again soon.</p>
 							</div>
 							<div>
-
+								<h3>Chapters</h3>
+								<ul>
+									<li><a href="chapter1.html">Chapter 1: Introduction</a></li>
+									<li><a href="chapter2.html">Chapter 2: Early History</a></li>
+									<li><a href="chapter3.html">Chapter 3: Key Figures</a></li>
+									<li><a href="chapter4.html">Chapter 4: Modern Developments</a></li>
+								</ul>
 							</div>
 						</section>
 					</article>
-
+				
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
