Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   morethanthis.html

--- a/morethanthis.html
+++ b/morethanthis.html
@@ -51,7 +51,7 @@
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
-								<p>The Seventh-day Adventist Church is a mainstream Protestant church with approximately 19 million members worldwide, including more than one million members in North America. The Seventh-day Adventist Church seeks to enhance quality of life for people everywhere and to let people know that Jesus is coming again soon.</p>
+								<p>Journey through the eyes of a young girl as her world crumbles around her, and witness the profound transformation of her perspective as she navigates the chaos and unraveling of a world on the brink of ruin.</p>
 							</div>
 							<div>
 								<h3>Chapters</h3>
