Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   morethanthis.html

--- a/morethanthis.html
+++ b/morethanthis.html
@@ -51,11 +51,12 @@
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
-								<p>Journey through the eyes of a young girl as her world crumbles around her, and witness the profound transformation of her perspective as she navigates the chaos and unraveling of a world on the brink of ruin.</p>
+								<p>Journey through the eyes of a young girl as her world crumbles around her, and witness the profound transformation of her perspective as she navigates the chaos and unraveling of a world on the brink of ruin...</p>
 							</div>
 							<div>
 								<h3>Chapters</h3>
 								<ul>
+									<li><a href="preface.html">Preface</a></li>
 									<li><a href="chapter1.html">Chapter 1: Introduction</a></li>
 									<li><a href="chapter2.html">Chapter 2: Early History</a></li>
 									<li><a href="chapter3.html">Chapter 3: Key Figures</a></li>
