Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	new file:   images/morethanthis.jpg
	modified:   morethanthis.html

--- a/morethanthis.html
+++ b/morethanthis.html
@@ -11,6 +11,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+			/* Inline CSS to set the background image for this page */
+			.banner {
+				background-image: url('assets/images/morethanthis.jpg');
+				background-size: cover;
+				background-position: center;
+			}
+		</style>
 	</head>
 	<body class="is-preload">
 
